# needle

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  LICENSE  README.md  bench.ps1  install-service.ps1  start-daemon.ps1  uninstall-service.ps1
.github/workflows/: ci.yml  release.yml
demo/: README.md  compare.ps1  mock-agent.ps1  needle-agent-demo.tape  needle-demo.tape
packaging/scoop/: needle.json
src/: engine.rs  ipc.rs  main.rs  mft.rs  service.rs
