[package]
name = "needle"
version = "0.1.3"
edition = "2021"
description = "Whole-machine, sub-millisecond file search MCP for AI agents (NTFS MFT + USN, Windows)"
license = "MIT"
repository = "https://github.com/Dedsec-Xu/needle"

[[bin]]
name = "needle"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
globset = "0.4"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ignore = "0.4"
windows-service = "0.7"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
